Fixed the about

--- a/index.html
+++ b/index.html
@@ -74,17 +74,18 @@
    <br>
    <br>
    <br>
-   <div class="about">
-     <img id="me" src="./resources/images/EVE.jpeg" alt="Me" style="width: 15%;">
-     <p id="aboutme">
-       Hello, <br>
-       My name is Eva and I am a Licensed Florist from New Orleans, USA. I have been in the floral business now for over 30 years. <br>
-       My main work is with Weddings, Events and lately, providing floral arrangemnts to some Movie and TV productions in the area. <br>
-       <br>
-       Thank you so much for visiting me here on my page, and I hope you take a look around at some of my work by following the links above.
-       If you have any comments or questions about my work and what I do, please feel free to <a href="">contact me</a>
-     </p>
-   </div>
+    <div class="about">
+      <p>
+        <img src="./resources/images/EVE.jpeg" alt="Me" width="172" height="135" align="left" >
+         Hello, 
+        <br>
+         My name is Eva and I am a Licensed Florist from New Orleans, USA. I have been in the floral business now for over 30 years. 
+         My main work is with Weddings, Events and lately, providing floral arrangemnts to some Movie and TV productions in the area.
+        <br>
+         Thank you so much for visiting me here on my page, and I hope you take a look around at some of my work by following the links above.
+         If you have any comments or questions about my work and what I do, please feel free to <a href="">contact me</a>
+      </p>
+    </div>
    <br>
    <br>
    <br>  
