Fixed Heading and nav

--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
      <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">  
    </head>
    <body>
-     <header>
-       <nav>
-         <ul>
-           <li><a href="./wedding.html">Wedding Design</a></li>
-           <li><a href="./events.html">Corporate Events and Branding</a></li>
-           <li><a href="#me">About</a></li>
-         </ul>
+    <header>
+      <nav>
+        <h1 id="title">EveSunflower Floral</h1>
+        <ul>
+          <li><a href="./wedding.html">Wedding Design</a></li>
+          <li><a href="./events.html">Corporate Events and Branding</a></li>
+          <li><a href="#me">About</a></li>
+        </ul>
        </nav>
-       <h1 id="title">EveSunflower Floral</h1>
-     </header>
+    </header>
    <br>
    <article id="W">
-     <br>
-     <img src="./resources/images/B/B18.jpeg">
-     <br>
-     </article>  
+     <img src="./resources/images/B/B18.jpeg" alt="Bridle Bouquette" width="900" height="900" >
+    </article>  
    <br>
    <article id="desc">
      <h1>Floral Design Portfolio</h1>
