fixed top center pic to stay center and made sheet liquid

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
    <br>
    <article id="W">
-     <img src="./resources/images/B/B18.jpeg" alt="Bridle Bouquette" width="900" height="900" >
+     <img src="./resources/images/B/B18.jpeg" alt="Bridle Bouquette" class="align-center medium" >
     </article>  
    <br>
    <article id="desc">
