Adjusted all the home screen photos and the links screen headings

--- a/cakes.html
+++ b/cakes.html
@@ -11,12 +11,11 @@
      </nav>
      <header>
        <nav>
-        <h1 id="title">Corporate Events and Branding by EveSunflower</h1> 
+        <h1 id="title">Wedding Cake Decoration by EveSunflower</h1> 
          <ul>
            <li><a href="./index.html">Home</a></li>
-           <li><a href="">Corporate Events</a></li>
-           <li><a href="">Movie and Television</a></li>
-           <li><a href="">Branding</a></li>
+           <li><a href="./wedding.html">Wedding Design</a></li>
+           <li><a href="./events.html">Events</a></li>
          </ul>
        </nav>
        
