--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h1 id="title">EveSunflower Floral</h1>
         <ul>
           <li><a href="./wedding.html">Wedding Design</a></li>
-          <li><a href="./events.html">Corporate Events and Branding</a></li>
+          <li><a href="./events.html">Events and Branding</a></li>
+          <li><a href="./cakes.html">Cakes</a></li>
           <li><a href="#me">About</a></li>
         </ul>
        </nav>
@@ -32,19 +33,19 @@
    <div id="mainpictures1">
      <div class="row1">
        <div class="column1">
-         <img id="i1" src="./resources/images/W/We11.jpg" alt="Gazebo" style="width:95%">
+         <img id="i1" src="./resources/images/W/We11.jpg" alt="Gazebo" width="400" height="400">
        </div>
        <div class="column1">
-         <img id="i2" src="./resources/images/W/We16.JPG" alt="Fireplace" style="width:90%">
+         <img id="i2" src="./resources/images/W/We16.JPG" alt="Fireplace" width="400" height="550">
        </div>
        <div class="column1">
-         <img id="i3" src="./resources/images/W/We14.jpeg" alt="Indoor" style="width:100%">
+         <img id="i3" src="./resources/images/W/We14.jpeg" alt="Indoor" width="450" height="450">
        </div>  
        <div class="column1">
-         <img id="i4" src="./resources/images/E/Show2.jpeg" alt="Show" style="width:80%">
+         <img id="i4" src="./resources/images/E/Show2.jpeg" alt="Show" width="400" height="500">
        </div>
        <div class="column1">
-         <img id="i5" src="./resources/images/E/E15.jpeg" alt="Branding" style="width:100%">
+         <img id="i5" src="./resources/images/E/E15.jpeg" alt="Branding" width="450" height="400">
        </div>  
      </div>
    </div>  
@@ -53,19 +54,19 @@
    <div id="mainpictures2">    
      <div class="row2">
        <div class="column2">
-         <img id="img1" src="./resources/images/E/TV1.jpeg" alt="TV" style="width:100%">
+         <img id="img1" src="./resources/images/E/TV1.jpeg" alt="TV" width="400" height="500">
        </div>
        <div class="column2">
-         <img id="img2" src="./resources/images/B/B7.jpeg" alt="Bouquets" style="width:105%">
+         <img id="img2" src="./resources/images/B/B7.jpeg" alt="Bouquets" width="400" height="400">
        </div>
        <div class="column2">
-         <img id="img3" src="./resources/images/B/Bo1.jpeg" alt="Boutonniere" style="width:105%">
+         <img id="img3" src="./resources/images/B/Bo1.jpeg" alt="Boutonniere" width="450" height="450">
        </div>
        <div class="column2">
-         <img id="img4" src="./resources/images/B/B16.jpeg" alt="Bouquet" style="width:103%">
+         <img id="img4" src="./resources/images/B/B16.jpeg" alt="Bouquet" width="400" height="450">
        </div>
        <div class="column2">
-         <img id="img5" src="./resources/images/C/C12.jpeg" alt="Cake" style="width: 105%">
+         <img id="img5" src="./resources/images/C/C12.jpeg" alt="Cake" width="450" height="500">
        </div>
      </div>
    </div>
@@ -74,7 +75,7 @@
    <br>
     <div class="about">
       <p>
-        <img src="./resources/images/EVE.jpeg" alt="Me" width="172" height="135" align="left" >
+        <img id="me" src="./resources/images/EVE.jpeg" alt="Me" width="172" height="135" align="left" >
          Hello, 
         <br>
          My name is Eva and I am a Licensed Florist from New Orleans, USA. I have been in the floral business now for over 30 years. 
