Completely redesigned the home page.

--- a/index.html
+++ b/index.html
@@ -7,89 +7,95 @@
      <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">  
    </head>
    <body>
-    <header>
-      <nav>
-        <h1 id="title">EveSunflower Floral</h1>
-        <ul>
-          <li><a href="./wedding.html">Wedding Design</a></li>
-          <li><a href="./events.html">Events and Branding</a></li>
-          <li><a href="./cakes.html">Cakes</a></li>
-          <li><a href="#me">About</a></li>
-        </ul>
-       </nav>
-    </header>
-   <br>
-   <article id="W">
-     <img src="./resources/images/B/B18.jpeg" alt="Bridle Bouquette" class="align-center medium" >
-    </article>  
-   <br>
-   <article id="desc">
-     <h1>Floral Design Portfolio</h1>
-     <h3>Highlights of the Floral work I have done over the 30 plus years in the business</h3>
-   </article>
-   <br>
-   <br>  
-   <br>
-   <div id="mainpictures1">
-     <div class="row1">
-       <div class="column1">
-         <img id="i1" src="./resources/images/W/We11.jpg" alt="Gazebo" width="400" height="400">
+     <div class="container_12 clearfix">
+      <div id="topbox">
+        <div id="header" class="grid_12">
+          <h1>EveSunflower Floral</h1>
+        </div>  
+        <div id="nav" class="grid_12">
+          <ul>
+            <li><a href="./wedding.html">Wedding Design</a></li>
+            <li><a href="./events.html">Events and Branding</a></li>
+            <li><a href="./cakes.html">Cakes</a></li>
+            <li><a href="#me">About</a></li>
+          </ul>
+        </div>
+      </div>
+      <br />
+      <div id="feature" class="grid_12">
+          <img id="frontpic" src="./resources/images/B/B18.jpeg" alt="Bridle Bouquette" class="align-center medium" width="800" >
+          <br />
+        <div id="headingbox">   
+          <div id="desc">
+            <h1>Floral Design Portfolio</h1>
+            <h3>Highlights of the Floral work I have done over the 30 plus years in the business</h3>
+          </div>
+        </div>
+      </div>
+      <br />
+      <br />  
+      <br />
+      <div id="row1">
+        <div class="article grid_4">
+          <img src="./resources/images/W/We11.jpg" alt="Gazebo" width="400">
+        </div>
+        <div class="article grid_4">
+          <img src="./resources/images/W/We16.JPG" alt="Fireplace" width="400"  >
+        </div>
+        <div class="article grid_4">
+          <img src="./resources/images/E/Show2.jpeg" alt="Show" width="400"> 
+        </div> 
+      </div> 
+      <div id="row2">
+       <div class="article grid_4">
+        <img src="./resources/images/W/We14.jpeg" alt="Indoor" width="400" >
        </div>
-       <div class="column1">
-         <img id="i2" src="./resources/images/W/We16.JPG" alt="Fireplace" width="400" height="550">
-       </div>
-       <div class="column1">
-         <img id="i3" src="./resources/images/W/We14.jpeg" alt="Indoor" width="450" height="450">
-       </div>  
-       <div class="column1">
-         <img id="i4" src="./resources/images/E/Show2.jpeg" alt="Show" width="400" height="500">
-       </div>
-       <div class="column1">
-         <img id="i5" src="./resources/images/E/E15.jpeg" alt="Branding" width="450" height="400">
-       </div>  
-     </div>
-   </div>  
-       <br>
-       <br>
-   <div id="mainpictures2">    
-     <div class="row2">
-       <div class="column2">
-         <img id="img1" src="./resources/images/E/TV1.jpeg" alt="TV" width="400" height="500">
-       </div>
-       <div class="column2">
-         <img id="img2" src="./resources/images/B/B7.jpeg" alt="Bouquets" width="400" height="400">
-       </div>
-       <div class="column2">
-         <img id="img3" src="./resources/images/B/Bo1.jpeg" alt="Boutonniere" width="450" height="450">
-       </div>
-       <div class="column2">
-         <img id="img4" src="./resources/images/B/B16.jpeg" alt="Bouquet" width="400" height="450">
-       </div>
-       <div class="column2">
-         <img id="img5" src="./resources/images/C/C12.jpeg" alt="Cake" width="450" height="500">
-       </div>
-     </div>
-   </div>
-   <br>
-   <br>
-   <br>
-    <div class="about">
-      <p>
-        <img id="me" src="./resources/images/EVE.jpeg" alt="Me" width="172" height="135" align="left" >
+       <div class="article grid_4">
+         <img src="./resources/images/E/E15.jpeg" alt="Branding" width="400" >
+       </div> 
+       <div class="article grid_4">
+         <img src="./resources/images/E/E12.jpeg" alt="Event" width="400"> 
+       </div> 
+     </div>  
+     <div id="row3">    
+      <div class="article grid_4">
+        <img src="./resources/images/B/B7.jpeg" alt="Bouquets" width="400" >
+      </div>
+      <div class="article grid_4">
+        <img src="./resources/images/B/Bo1.jpeg" alt="Boutonniere" width="400" >
+      </div>
+      <div class="article grid_4">
+        <img src="./resources/images/B/B16.jpeg" alt="Bouquet" width="400">
+      </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <div class="about grid_8">
+      <div id="me">
+        <img src="./resources/images/EVE.jpeg" alt="Me" width="500">
+      </div>
+      <div id="story">
+        <p>
          Hello, 
-        <br>
+        <br />
          My name is Eva and I am a Licensed Florist from New Orleans, USA. I have been in the floral business now for over 30 years. 
          My main work is with Weddings, Events and lately, providing floral arrangemnts to some Movie and TV productions in the area.
-        <br>
+        <br />
+        <br />
          Thank you so much for visiting me here on my page, and I hope you take a look around at some of my work by following the links above.
-         If you have any comments or questions about my work and what I do, please feel free to <a href="">contact me</a>
-      </p>
+         If you have any comments or questions about my work and what I do, please feel free to <a href=""><button>contact me</button></a>
+        </p>
+      </div>
     </div>
    <br>
    <br>
    <br>  
-   <footer>
-     &copy; 2022 EveSunflower Floral
-   </footer>
+   <div id="footer" class="grid_12">
+     <p>
+     &copy; EveSunflower Floral 2022
+     </p>
+    </div>
+   </div> <!--Container_12-->
    </body>
  </html>
