Finished the weddings and Cakes pages

--- a/cakes.html
+++ b/cakes.html
@@ -4,38 +4,91 @@
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
    </head>
-   <body>
-     <nav>
-
-
-     </nav>
-     <header>
-       <nav>
-        <h1 id="title">Wedding Cake Decoration by EveSunflower</h1> 
-         <ul>
-           <li><a href="./index.html">Home</a></li>
-           <li><a href="./wedding.html">Wedding Design</a></li>
-           <li><a href="./events.html">Events</a></li>
-         </ul>
-       </nav>
-       
-     </header>
-     <div class="item">
-       <h2></h2>
-       <img>
-       <p></p>
-     </div>
-
-     <div class='item'>
-       <h2 ></h2>
-       <img>
-       <p></p>
-     </div>
-     <br>
-     <br>
-     <br>
-     <footer>
-       &copy; 2022 EveSunflower Floral
-     </footer>
+    <body>
+      <div class="container_12 clearfix">
+        <div id="topbox">
+          <div id="header" class="grid_12">
+            <h1>Cake Decorations by EveSunflower</h1>
+          </div>
+          <div id="nav" class="grid_12"> 
+            <ul>
+              <li><a href="./index.html">Home</a></li>
+            </ul>
+          </div>
+        </div>
+        <br />
+        <div id="headingbox">
+          <div id="desc">
+            <h1>Wedding Design - Cake Decorations</h1>
+            <h3>Below is a collection of the different Cake decorations I have created for weddings</h3>
+          </div>
+        </div>
+        <br />
+        <br />  
+        <br />
+        <div id="row1">
+          <div class="article grid_4">
+            <img src="./resources/images/C/C6.jpeg" alt="Cake6" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C10.jpeg" alt="Cake10" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C3.jpeg" alt="Cake3" width="400">
+          </div>  
+        </div>  
+        <div id="row2">
+          <div class="article grid_4">
+            <img src="./resources/images/C/C4.jpeg" alt="Cake4" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C5.jpeg" alt="Cake5" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C1.jpeg" alt="Cake1" width="400">
+          </div>  
+        </div> 
+        <div id="row3">
+          <div class="article grid_4">
+            <img src="./resources/images/C/C2.jpeg" alt="Cake2" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C8.jpeg" alt="Cake8" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C9.jpeg" alt="Cake9" width="400">
+          </div>  
+        </div> 
+        <div id="row4">
+          <div class="article grid_4">
+            <img src="./resources/images/C/C7.jpeg" alt="Cake7" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C11.jpeg" alt="Cake11" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C12.jpeg" alt="Cake12" width="400">
+          </div>  
+        </div> 
+        <div id="row5">
+          <div class="article grid_4">
+            <img src="./resources/images/C/C13.jpeg" alt="Cake13" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C14.jpeg" alt="Cake14" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/C/C15.jpeg" alt="Cake15" width="400">
+          </div>  
+        </div> 
+      <br />
+      <br />
+      <br />  
+      <div id="footer" class="grid_12">
+        <p>
+        &copy; EveSunflower Floral 2022
+        </p>
+      </div>
+    </div> <!--Container_12-->
    </body>
  </html>
