--- a/events.html
+++ b/events.html
@@ -4,39 +4,169 @@
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
    </head>
-   <body>
-     <nav>
-
-
-     </nav>
-     <header>
-       <nav>
-        <h1 id="title">Corporate Events and Branding by EveSunflower</h1> 
-         <ul>
-           <li><a href="./index.html">Home</a></li>
-           <li><a href="">Corporate Events</a></li>
-           <li><a href="">Movie and Television</a></li>
-           <li><a href="">Branding</a></li>
-         </ul>
-       </nav>
-       
-     </header>
-     <div class="item">
-       <h2></h2>
-       <img>
-       <p></p>
-     </div>
-
-     <div class='item'>
-       <h2 ></h2>
-       <img>
-       <p></p>
-     </div>
-     <br>
-     <br>
-     <br>
-     <footer>
-       &copy; 2022 EveSunflower Floral
-     </footer>
+    <body>
+      <div class="container_12 clearfix">
+        <div id="topbox">
+          <div id="header" class="grid_12">
+            <h1>Weddings by EveSunflower</h1>
+          </div>
+          <div id="nav" class="grid_12"> 
+            <ul>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="#arch">Arch Displays</a></li>
+              <li><a href="#tablework">Table Work</a></li>
+              <li><a href="">Hand Work</a></li>
+            </ul>
+          </div>
+        </div>
+        <br />
+        <div id="headingbox">
+          <div id="desc">
+            <h1>Wedding Design - Arches</h1>
+            <h3>Below is a collection of the different styles of Arches I have created for weddings</h3>
+          </div>
+        </div>
+        <br />
+        <br />  
+        <br />
+        <div id="row1">
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar5.jpeg" alt="Arch5" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar3.jpeg" alt="Arch3" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar9.jpeg" alt="Arch9" width="400">
+          </div>  
+        </div>  
+        <div id="row2">
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar2.jpeg" alt="Arch2" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar8.jpeg" alt="Arch8" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar4.jpeg" alt="Arch4" width="400">
+          </div>  
+        </div> 
+        <div id="row3">
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar7.jpeg" alt="Arch7" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar1.jpeg" alt="Arch1" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ar6.jpeg" alt="Arch6" width="400"">
+          </div>  
+        </div> 
+        <br />
+        <div id="headingbox">
+          <div id="desc">
+            <h1>Wedding Design - Table Work</h1>
+            <h3>Below is a collection of the different types of Table Work I have created for weddings</h3>
+          </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <div id="row1">
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ta2.jpeg" alt="Table2" width="400">
+          </div>
+          <div class="article grid_4">
+            <img id="i2" src="./resources/images/W/We2.jpeg" alt="Wed2" width="400">
+          </div>
+          <div class="article grid_4">
+            <img id="i3" src="./resources/images/W/Ta10.jpeg" alt="Table10" width="400">
+          </div>  
+        </div>
+        <div id="row2"> 
+          <div class="article grid_4">
+            <img src="./resources/images/W/We3.jpeg" alt="Wed3" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/W/Ta9.jpeg" alt="Table9" width="400">
+         </div>
+         <div class="article grid_4">
+            <img src="./resources/images/W/Ta13.jpeg" alt="Table13" width="400">
+         </div>  
+       </div>  
+       <div id="row3">
+        <div class="article grid_4">
+          <img id="i1" src="./resources/images/W/Ta12.jpeg" alt="Table12" width="400">
+        </div>
+        <div class="article grid_4">
+          <img id="i2" src="./resources/images/W/Ta11.jpeg" alt="Table11" width="400">
+        </div>
+        <div class="article grid_4">
+          <img id="i3" src="./resources/images/W/We4.jpeg" alt="Wed4" width="400">
+        </div>  
+      </div>
+      <br />
+        <div id="headingbox">
+          <div id="desc">
+            <h1>Wedding Design - Hand Work</h1>
+            <h3>Below is a collection of the different types of Hand Work I have created for weddings</h3>
+          </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <div id="row1">
+          <div class="article grid_4">
+            <img src="./resources/images/B/B1.jpg" alt="Bouquet1" width="400">
+          </div>
+          <div class="article grid_4">
+            <img id="i2" src="./resources/images/B/B2.jpg" alt="Bouquet2" width="400">
+          </div>
+          <div class="article grid_4">
+            <img id="i3" src="./resources/images/B/B10.jpeg" alt="Bouquet10" width="400">
+          </div>  
+        </div>
+        <div id="row2"> 
+          <div class="article grid_4">
+            <img src="./resources/images/B/B20.jpeg" alt="Bouquet20" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/B/B8.jpeg" alt="Bouquet8" width="400">
+         </div>
+         <div class="article grid_4">
+            <img src="./resources/images/B/B9.jpeg" alt="Bouquet9" width="400">
+         </div>  
+       </div>  
+       <div id="row3">
+        <div class="article grid_4">
+          <img id="i1" src="./resources/images/B/B13.jpeg" alt="Bouquet13" width="400">
+        </div>
+        <div class="article grid_4">
+          <img id="i2" src="./resources/images/B/B11.jpeg" alt="Bouquet11" width="400">
+        </div>
+        <div class="article grid_4">
+          <img id="i3" src="./resources/images/B/B12.jpeg" alt="Bouquet12" width="400">
+        </div>  
+      </div>
+      <div id="row4"> 
+        <div class="article grid_4">
+          <img src="./resources/images/B/B5.jpg" alt="Bouquet5" width="400">
+        </div>
+        <div class="article grid_4">
+          <img src="./resources/images/B/B14.jpeg" alt="Bouquet14" width="400">
+       </div>
+       <div class="article grid_4">
+          <img src="./resources/images/B/B15.jpeg" alt="Bouquet15" width="400">
+       </div>  
+      </div>  
+      <br />
+      <br />
+      <br />  
+      <div id="footer" class="grid_12">
+        <p>
+        &copy; EveSunflower Floral 2022
+        </p>
+      </div>
+    </div> <!--Container_12-->
    </body>
  </html>
