fixed the events page for headings and pics

--- a/events.html
+++ b/events.html
@@ -8,22 +8,22 @@
       <div class="container_12 clearfix">
         <div id="topbox">
           <div id="header" class="grid_12">
-            <h1>Weddings by EveSunflower</h1>
+            <h1>Events by EveSunflower</h1>
           </div>
           <div id="nav" class="grid_12"> 
             <ul>
               <li><a href="./index.html">Home</a></li>
-              <li><a href="#arch">Arch Displays</a></li>
-              <li><a href="#tablework">Table Work</a></li>
-              <li><a href="">Hand Work</a></li>
+              <li><a href="#arch">Corporate Events</a></li>
+              <li><a href="#tablework">Branding and Shows</a></li>
+              <li><a href="">TV and Movies</a></li>
             </ul>
           </div>
         </div>
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Wedding Design - Arches</h1>
-            <h3>Below is a collection of the different styles of Arches I have created for weddings</h3>
+            <h1>Events - Corporate Events</h1>
+            <h3>Below is a collection of different pieces I have created for various corporate events</h3>
           </div>
         </div>
         <br />
@@ -31,42 +31,53 @@
         <br />
         <div id="row1">
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar5.jpeg" alt="Arch5" width="400">
+            <img src="./resources/images/E/E3.jpeg" alt="Event3" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar3.jpeg" alt="Arch3" width="400">
+            <img src="./resources/images/E/E7.jpeg" alt="Event7" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar9.jpeg" alt="Arch9" width="400">
+            <img src="./resources/images/E/E11.jpeg" alt="Event11" width="400">
           </div>  
         </div>  
         <div id="row2">
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar2.jpeg" alt="Arch2" width="400">
+            <img src="./resources/images/E/E2.jpeg" alt="Event2" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar8.jpeg" alt="Arch8" width="400">
+            <img src="./resources/images/E/E12.jpeg" alt="Event12" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar4.jpeg" alt="Arch4" width="400">
+            <img src="./resources/images/E/E4.jpeg" alt="Event4" width="400">
           </div>  
         </div> 
         <div id="row3">
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar7.jpeg" alt="Arch7" width="400">
+            <img src="./resources/images/E/E8.jpeg" alt="Event8" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar1.jpeg" alt="Arch1" width="400">
+            <img src="./resources/images/E/E6.jpeg" alt="Event6" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/W/Ar6.jpeg" alt="Arch6" width="400"">
+            <img src="./resources/images/E/E10.jpeg" alt="Event10" width="400">
           </div>  
-        </div> 
+        </div>
+        <div id="row4">
+          <div class="article grid_4">
+            <img src="./resources/images/E/E9.jpeg" alt="Event9" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/E/E13.jpeg" alt="Event13" width="400">
+          </div>
+          <div class="article grid_4">
+            <img src="./resources/images/E/E14.jpeg" alt="Arch14" width="400">
+          </div>  
+        </div>  
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Wedding Design - Table Work</h1>
-            <h3>Below is a collection of the different types of Table Work I have created for weddings</h3>
+            <h1>Events - Branding and Shows</h1>
+            <h3>Below is a collection of some of my branding work and show peices I have created </h3>
           </div>
         </div>
         <br />
@@ -74,42 +85,31 @@
         <br />
         <div id="row1">
           <div class="article grid_4">
-            <img src="./resources/images/W/Ta2.jpeg" alt="Table2" width="400">
+            <img src="./resources/images/E/BR1.jpeg" alt="Brand1" width="400">
           </div>
           <div class="article grid_4">
-            <img id="i2" src="./resources/images/W/We2.jpeg" alt="Wed2" width="400">
+            <img id="i2" src="./resources/images/E/Show3.jpeg" alt="Show3" width="400">
           </div>
           <div class="article grid_4">
-            <img id="i3" src="./resources/images/W/Ta10.jpeg" alt="Table10" width="400">
+            <img id="i3" src="./resources/images/E/BR3.jpg" alt="Brand3" width="400">
           </div>  
         </div>
         <div id="row2"> 
           <div class="article grid_4">
-            <img src="./resources/images/W/We3.jpeg" alt="Wed3" width="400">
+            <img src="./resources/images/E/Show1.jpeg" alt="Show1" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/W/Ta9.jpeg" alt="Table9" width="400">
+            <img src="./resources/images/E/Show2.jpeg" alt="Show2" width="400">
          </div>
          <div class="article grid_4">
-            <img src="./resources/images/W/Ta13.jpeg" alt="Table13" width="400">
+            <img src="./resources/images/E/BR2.jpeg" alt="Brand2" width="400">
          </div>  
        </div>  
-       <div id="row3">
-        <div class="article grid_4">
-          <img id="i1" src="./resources/images/W/Ta12.jpeg" alt="Table12" width="400">
-        </div>
-        <div class="article grid_4">
-          <img id="i2" src="./resources/images/W/Ta11.jpeg" alt="Table11" width="400">
-        </div>
-        <div class="article grid_4">
-          <img id="i3" src="./resources/images/W/We4.jpeg" alt="Wed4" width="400">
-        </div>  
-      </div>
       <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Wedding Design - Hand Work</h1>
-            <h3>Below is a collection of the different types of Hand Work I have created for weddings</h3>
+            <h1>Events - TV and Movie</h1>
+            <h3>Below is a collection of the different peices I have created for different TV and Movie productions</h3>
           </div>
         </div>
         <br />
@@ -117,46 +117,46 @@
         <br />
         <div id="row1">
           <div class="article grid_4">
-            <img src="./resources/images/B/B1.jpg" alt="Bouquet1" width="400">
+            <img src="./resources/images/E/M1.jpeg" alt="Movie1" width="400">
           </div>
           <div class="article grid_4">
-            <img id="i2" src="./resources/images/B/B2.jpg" alt="Bouquet2" width="400">
+            <img id="i2" src="./resources/images/E/M2.jpeg" alt="Movie2" width="400">
           </div>
           <div class="article grid_4">
-            <img id="i3" src="./resources/images/B/B10.jpeg" alt="Bouquet10" width="400">
+            <img id="i3" src="./resources/images/E/M3.jpeg" alt="Movie3" width="400">
           </div>  
         </div>
         <div id="row2"> 
           <div class="article grid_4">
-            <img src="./resources/images/B/B20.jpeg" alt="Bouquet20" width="400">
+            <img src="./resources/images/E/M4.jpeg" alt="Movie4" width="400">
           </div>
           <div class="article grid_4">
-            <img src="./resources/images/B/B8.jpeg" alt="Bouquet8" width="400">
+            <img src="./resources/images/E/M5.jpeg" alt="Movie5" width="400">
          </div>
          <div class="article grid_4">
-            <img src="./resources/images/B/B9.jpeg" alt="Bouquet9" width="400">
+            <img src="./resources/images/E/M6.jpeg" alt="Movie6" width="400">
          </div>  
        </div>  
        <div id="row3">
         <div class="article grid_4">
-          <img id="i1" src="./resources/images/B/B13.jpeg" alt="Bouquet13" width="400">
+          <img id="i1" src="./resources/images/E/M10.jpeg" alt="Movie10" width="400">
         </div>
         <div class="article grid_4">
-          <img id="i2" src="./resources/images/B/B11.jpeg" alt="Bouquet11" width="400">
+          <img id="i2" src="./resources/images/E/M8.jpeg" alt="Movie8" width="400">
         </div>
         <div class="article grid_4">
-          <img id="i3" src="./resources/images/B/B12.jpeg" alt="Bouquet12" width="400">
+          <img id="i3" src="./resources/images/E/M9.jpeg" alt="Movie9" width="400">
         </div>  
       </div>
       <div id="row4"> 
         <div class="article grid_4">
-          <img src="./resources/images/B/B5.jpg" alt="Bouquet5" width="400">
+          <img src="./resources/images/E/M7.jpeg" alt="Movie7" width="400">
         </div>
         <div class="article grid_4">
-          <img src="./resources/images/B/B14.jpeg" alt="Bouquet14" width="400">
+          <img src="./resources/images/E/TV1.jpeg" alt="TV1" width="400">
        </div>
        <div class="article grid_4">
-          <img src="./resources/images/B/B15.jpeg" alt="Bouquet15" width="400">
+          <img src="" alt="" width="400">
        </div>  
       </div>  
       <br />
