--- a/cakes.html
+++ b/cakes.html
@@ -3,12 +3,14 @@
    <head>
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
+     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="/favicon.ico" type="image/x-icon">    
    </head>
     <body>
       <div class="container_12 clearfix">
         <div id="topbox">
           <div id="header" class="grid_12">
-            <h1>Cake Decorations by EveSunflower</h1>
+            <h1>Cake Decor by EveSunflower</h1>
           </div>
           <div id="nav" class="grid_12"> 
             <ul>
@@ -86,7 +88,8 @@
       <br />  
       <div id="footer" class="grid_12">
         <p>
-        &copy; EveSunflower Floral 2022
+          <img src="./resources/images/logo2.png" alt="Logo" width="100">  
+        &copy; EveSunflower Floral 2022 
         </p>
       </div>
     </div> <!--Container_12-->
