--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="./resources/images/W/We14.jpeg" alt="Indoor" width="400" >
        </div>
        <div class="article grid_4">
-         <img src="./resources/images/E/E15.jpeg" alt="Branding" width="400" >
+         <img src="./resources/images/E/BR2.jpeg" alt="Branding" width="400" >
        </div> 
        <div class="article grid_4">
          <img src="./resources/images/E/E12.jpeg" alt="Event" width="400"> 
@@ -92,10 +92,11 @@
    <br>
    <br>  
    <div id="footer" class="grid_12">
-     <p>
-     &copy; EveSunflower Floral 2022
-     </p>
-    </div>
+    <p>
+      <img src="./resources/images/logo2.png" alt="Logo" width="100">  
+    &copy; EveSunflower Floral 2022 
+    </p>
+  </div>
    </div> <!--Container_12-->
    </body>
  </html>
