--- a/events.html
+++ b/events.html
@@ -3,6 +3,8 @@
    <head>
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
+     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="/favicon.ico" type="image/x-icon">
    </head>
     <body>
       <div class="container_12 clearfix">
@@ -13,16 +15,16 @@
           <div id="nav" class="grid_12"> 
             <ul>
               <li><a href="./index.html">Home</a></li>
-              <li><a href="#arch">Corporate Events</a></li>
-              <li><a href="#tablework">Branding and Shows</a></li>
-              <li><a href="">TV and Movies</a></li>
+              <li><a href="#corp">Corporate Events</a></li>
+              <li><a href="#brand">Branding and Shows</a></li>
+              <li><a href="#movie">TV and Movies</a></li>
             </ul>
           </div>
         </div>
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Events - Corporate Events</h1>
+            <h1 id="corp">Events - Corporate Events</h1>
             <h3>Below is a collection of different pieces I have created for various corporate events</h3>
           </div>
         </div>
@@ -76,7 +78,7 @@
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Events - Branding and Shows</h1>
+            <h1 id="brand">Events - Branding and Shows</h1>
             <h3>Below is a collection of some of my branding work and show peices I have created </h3>
           </div>
         </div>
@@ -108,7 +110,7 @@
       <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Events - TV and Movie</h1>
+            <h1 id="movie">Events - TV and Movie</h1>
             <h3>Below is a collection of the different peices I have created for different TV and Movie productions</h3>
           </div>
         </div>
@@ -164,7 +166,8 @@
       <br />  
       <div id="footer" class="grid_12">
         <p>
-        &copy; EveSunflower Floral 2022
+          <img src="./resources/images/logo2.png" alt="Logo" width="100">  
+        &copy; EveSunflower Floral 2022 
         </p>
       </div>
     </div> <!--Container_12-->
