--- a/wedding.html
+++ b/wedding.html
@@ -3,6 +3,8 @@
    <head>
      <title>EveSunflower Floral</title>
      <link href="./resources/css/index.css" type='text/css' rel="stylesheet">
+     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="/favicon.ico" type="image/x-icon">
    </head>
     <body>
       <div class="container_12 clearfix">
@@ -15,14 +17,17 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="#arch">Arch Displays</a></li>
               <li><a href="#tablework">Table Work</a></li>
-              <li><a href="">Hand Work</a></li>
+              <li><a href="#handwork">Hand Work</a></li>
             </ul>
           </div>
+        </div>
+        <div id="feature" class="grid_12">
+          <img src="./resources/images/logo2.png" alt="Evesunflowerlogo" class="align-center medium" width="300" >
         </div>
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Wedding Design - Arches</h1>
+            <h1 id="arch">Wedding Design - Arches</h1>
             <h3>Below is a collection of the different styles of Arches I have created for weddings</h3>
           </div>
         </div>
@@ -65,7 +70,7 @@
         <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Wedding Design - Table Work</h1>
+            <h1 id="tablework">Wedding Design - Table Work</h1>
             <h3>Below is a collection of the different types of Table Work I have created for weddings</h3>
           </div>
         </div>
@@ -108,7 +113,7 @@
       <br />
         <div id="headingbox">
           <div id="desc">
-            <h1>Wedding Design - Hand Work</h1>
+            <h1 id="handwork">Wedding Design - Hand Work</h1>
             <h3>Below is a collection of the different types of Hand Work I have created for weddings</h3>
           </div>
         </div>
@@ -164,7 +169,8 @@
       <br />  
       <div id="footer" class="grid_12">
         <p>
-        &copy; EveSunflower Floral 2022
+          <img src="./resources/images/logo2.png" alt="Logo" width="100">  
+        &copy; EveSunflower Floral 2022 
         </p>
       </div>
     </div> <!--Container_12-->
